<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DriverApp</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">ololo</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_start">@string/app_name</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_test2">Map</string>
    <string name="create_pick_image_gallery">Select from gallery</string>
    <string name="create_pick_image_photo">Take a picture</string>
    <string name="create_pick_image_title">Event photo</string>
    <string name="login_fb">Login via Facebook</string>
    <string name="login_vk">Login via VK</string>
    <string name="login_skip">Login without auth</string>
    <string name="action_profile">Profile</string>
    <string name="create_pick_map_unknown">Dropped pin</string>
    <string name="create">Create</string>
    <string name="action_report">Report</string>
    <string name="error_connection_check">Check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="splash_subtitle">Simple road events</string>
    <string name="splash_title">Driver</string>
    <string name="picker_location_advice_tap_title">Tap the map</string>
    <string name="picker_location_advice_tap_subtitle">To detect location</string>
    <string name="event_show_comments">Show comments (%d)</string>
    <string name="create_vk">VK</string>
    <string name="create_twitter">Twitter</string>
    <string name="create_facebook">Facebook</string>
    <string name="create_describe">Describe the event</string>
    <string name="create_pick_map">Pick location</string>
    <string name="create_pick_category">Select category</string>
    <string name="create_share_title">Share via:</string>
    <string name="comment_this">Comment this</string>
    <string name="login_subtitle">We promise not to post without your permission</string>
    <string name="login_twitter">Login via twitter</string>
    <string name="title_activity_create">Create</string>
    <string name="event_title">Событие</string>
    <string name="picker_location_title">Pick location</string>
    <string name="picker_location_advice_wait">Wait please</string>
    <string name="picker_location_advice_loading">Location identification</string>
    <string name="picker_location_advice_error">Unknown location</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="cropper_title">Crop image</string>
    <string name="stats" formatted="false">%d comments · %d likes</string>
    <string name="title_activity_profile">Profile</string>
    <string name="username_placeholder">Name</string>
    <string name="login_google">Login via Google</string>
    <string name="create_sending">Sending</string>
    <string name="create_sending_message">Event is creating</string>
    <string name="create_addphoto">+ Add photo</string>
    <string name="cropping">Cropping</string>
    <string name="title_activity_test_nav">TestNavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="google_client_id">910124595768-onqau0v51phh4io4v8gve9ccoed2udll.apps.googleusercontent.com</string>
    <string name="title_activity_auth_actiivty">AuthActiivty</string>
    <string name="login">Login</string>
    <string name="error_loginfirstly">Сначала нужно зайти</string>
    <string name="error">Ошибка</string>
    <string name="ok_login">Зайти</string>
    <string name="no_well">Ладно</string>
    <string name="facebook_app_id">1655600708003374</string>
    <string name="login_more">more</string>

    <string name="navigation_feed">Events feed</string>
    <string name="navigation_map">Events map</string>
    <string name="navigation_create">Add event</string>
    <string name="navigation_my">My events</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="navigation_logout">Logout</string>
    <string name="menu_today">Today</string>
    <string name="menu_week">Week</string>
    <string name="menu_all">All the time</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_category">Category</string>
    <string name="profile_avatar_update_loading">Loading</string>
    <string name="ok">OK</string>
</resources>
