<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item
        android:id="@+id/action_refresh"
        android:title="refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/today"
        android:title="@string/menu_today"/>
    <item
        android:id="@+id/week"
        android:title="@string/menu_week"/>
    <item
        android:id="@+id/all"
        android:title="@string/menu_all"/>
    <item
        android:id="@+id/nearby"
        android:title="@string/menu_nearby"/>
    <item
        android:id="@+id/category"
        android:title="@string/menu_category"/>

</menu>
